# protex-cv-takehome

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: annotations.json
src/: config.py  event_detector.py  geometry.py  main.py  slack_client.py  slack_formatter.py  slack_notifier.py  video_generator.py  video_writer.py  visualizer.py
tests/: test_event_detector.py  test_geometry.py  test_slack_formatter.py
